gccida/g1/comptypes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:918:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:919:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:921:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:922:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:923:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:924:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:925:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:926:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:928:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:929:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1048:20: error: expected expression
v18 = ( tree_node *)*( ( _QWORD *)v2 + 1); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1048:9: error: use of undeclared identifier 'tree_node'
v18 = ( tree_node *)*( ( _QWORD *)v2 + 1); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1049:20: error: expected expression
v19 = ( tree_node *)*( ( _QWORD *)rtl + 1); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1049:9: error: use of undeclared identifier 'tree_node'
v19 = ( tree_node *)*( ( _QWORD *)rtl + 1); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1060:20: error: expected expression
v22 = ( tree_node *)*( ( _QWORD *)v2 + 3); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1060:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)*( ( _QWORD *)v2 + 3); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1061:20: error: expected expression
v23 = ( tree_node *)*( ( _QWORD *)rtl + 3); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1061:9: error: use of undeclared identifier 'tree_node'
v23 = ( tree_node *)*( ( _QWORD *)rtl + 3); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/c-typeck.c:1074:20: error: expected expression
v26 = ( tree_node *)*( ( _QWORD *)rtl + 17); 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/comptypes/src/obj/c-typeck.o] Error 1
